<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Here are my widgets:</string>
    <string name="ButtonText">Button</string>
    <string name="checkThis">Check this out!</string>
    <string name="switchOnOff">Switch on / off!</string>
    <string name="nameHint">Type your answer here</string>

    <string name="loginButton">Login</string>
    <string name="emailLabel">Enter your email address:</string>
    <string name="email">Type email here</string>
    <string name="passwordLabel">Type your password:</string>
    <string name="yourProfile">Your profile</string>
    <string name="nameLabel">Your name:</string>
    <string name="name">Enter your name</string>
    <string name="emailLabel2">Your email:</string>
    <string name="yourPicture">Your picture:</string>
    <string name="picInstruction">Click the button above to take a picture</string>
    <string name="chat">Go to chat</string>
    <string name="goToolbar">Go to Toolbar page</string>
    <string name="menuBtn" />
    <string name="menuBtn2" />
    <string name="menuBtn3" />
    <string name="myoverflow">My overflow</string>
    <string name="min">Min: </string>
    <string name="current">Current: </string>
    <string name="max">Max: </string>
</resources>
