<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourProfile"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"/>

    <EditText
        android:id="@+id/name"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailLabel2" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <TextView
        android:id="@+id/pictureLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourPicture" />

    <ImageButton
        android:id="@+id/pictureButton"
        android:src="@android:drawable/picture_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dispatchTakePictureIntent"/>

    <TextView
        android:id="@+id/picInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picInstruction" />

    <Button
        android:id="@+id/goToChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat" />

    <Button
        android:id="@+id/goToToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToolbar" />

</LinearLayout>
