<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item1"
        android:title="@string/menuBtn"
        android:icon="@drawable/msgicon"
        android:orderInCategory="1"
        app:showAsAction="always" />


    <item android:id="@+id/item2"
        android:icon="@drawable/newmsgicon"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/menuBtn2" />

    <item android:id="@+id/item3"
        android:icon="@drawable/returnbtn"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/menuBtn3" />

    <item android:id="@+id/overflowMenu"
        android:title="@string/myoverflow" />




</menu>