<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_message"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:text="@string/ButtonText"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/button"
        android:layout_marginStart="1dp"
        android:src="@drawable/flag"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:text="@string/checkThis"
        />

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton"
        android:layout_toEndOf="@+id/button"
        android:text="@string/switchOnOff"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mySwitch"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nameHint" />

</RelativeLayout>
